--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@1,300&display=swap"
       rel="stylesheet"
     />
-
   </head>
   <header>
     <!-- ---------------------Banner Section ------------------------------------>
@@ -95,13 +94,14 @@
       <div class="plan-titile">
         <h1>Our Donate Plan</h1>
         <p>
-          Coronavirus is spreading across our world and dramatically impacts the
-          poorest communities of the globe: <br />
-          those who are living in hunger, where social distancing is a
-          privilege,
+          Our mission is to provide mobility equipment to <br />
+          those with physical needs and enable them to lead a <br />
+          more active and independent life as well as distribute <br />
+          winter blankets to the poorest of communities and also <br>empower 
+          young women with sewing machines <br> to help them become economically
           <br />
-          and who don’t have the same access to information, sanitation and
-          healthcare as we do.
+          independent. <br> Sylhet Aid is a project of 13 Rivers Trust - Charity
+          Registration No. 1162190
         </p>
       </div>
 
@@ -159,13 +159,19 @@
 
     <section>
       <div id="update-titile">
-        <h1>Get My Updates</h1>
+        <h1 id="support-sylhet">Support Victims Of Sylhet</h1>
+
         <p>
-          <h2 id="support-sylhet">Support Victims Of Sylhet</h2>
-          <hr>
-          
+          The first generation of British Bangladeshi community from Sylhet are
+          <br />
+          rapidly disappearing due to return migration and natural causes.
+          <br />
+          Sylhet Aid is continuing the good work of our elders <br />
+          by providing support <br />
+          to the most needy. Our aim is to deliver <br />
+
+          aid to the poorest communities in the greater Sylhet region.
         </p>
-       
       </div>
 
       <div class="form-container">
