Bounce part added

--- a/index.html
+++ b/index.html
@@ -155,6 +155,28 @@
       </div>
     </section>
 
+
+    <section class="give">
+
+      <div class="give-container">
+        <div>
+          <h1>
+            Ways to Give
+          </h1>
+          <p>When you give to CARE, you fight <br>
+             against the barriers that women and girls face every day.</p>
+             <button class="btn">
+              GIVE NOW
+             </button>
+        </div>
+  
+        <div>
+          <img src="images/donnatephoto.jpg" alt="">
+        </div>
+      </div>
+      
+    </section>
+
     <!-- Get My Updates section ---------------------------------------------------------------->
 
     <section>
@@ -173,7 +195,7 @@
           aid to the poorest communities in the greater Sylhet region.
         </p>
       </div>
-
+  <!-- form section -------------- -->
       <div class="form-container">
         <div id="box">
           <div>
